# wikipedia_sql_loader

./: Cargo.toml  README.md
src/: main.rs
