[package]
name = "wikipedia_sql_loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wikipedia_undumper={git="https://github.com/theAdamColton/wikipedia_undumper.git"}
mysql = "24.0.0"
clap = { version = "4.2.7", features = ["derive"] }
bzip2 = "0.4.4"
chrono = "0.4.24"
